--- a/styling.css
+++ b/styling.css
@@ -16,7 +16,7 @@ a:hover {
 
 p {
   font-family: "KoHo", sans-serif;
-  font-size: 2em;
+  font-size: 2vw;
   border-style: groove;
   border-width: 0.8em 0.2em 0.3em 0.2em;
   border-color: cyan;
