--- a/styling.css
+++ b/styling.css
@@ -1,5 +1,5 @@
-html{
-    font-size: 2vw;
+html {
+  font-size: 2vw;
 }
 body {
   background-image: url("gif1.gif");
@@ -21,12 +21,12 @@ p {
   font-family: "KoHo", sans-serif;
   /* font-size: 1rem; */
   border-style: groove;
-  border-width: 0.5em 0.2em 0.3em 0.2em;
+  border-width: 0.5rem 0.2rem 0.3rem 0.2rem;
   border-color: cyan;
-  border-radius: 70px;
-  padding: 5px;
-  word-spacing: 2px;
-  margin: 1px;
+  border-radius: 0.5rem;
+  padding: 0.5rem;
+  word-spacing: 0.1rem;
+  margin: 1rem;
   /* font-variant: small-caps; */
   text-align: center;
   /* word-wrap: break-word; */
