--- a/styling.css
+++ b/styling.css
@@ -1,6 +1,13 @@
 html {
   font-size: 2vw;
 }
+
+h1 {
+  font-size: 2.5rem;
+  text-align: center;
+  text-shadow: 0.1rem 0.2rem 0.2rem rgb(172, 172, 52);
+}
+
 body {
   background-image: url("gif1.gif");
   color: white;
@@ -31,6 +38,6 @@ p {
   text-align: center;
   /* word-wrap: break-word; */
 }
-#ul1{
+#ul1 {
   list-style-type: none;
 }
