--- a/styling.css
+++ b/styling.css
@@ -1,9 +1,9 @@
 html {
-  font-size: 2vw;
+    font-size: 4vmin;
 }
 
 h1 {
-  font-size: 2.5rem;
+  font-size: 8vmin;
   background-image: url("gif2.gif");
   text-align: center;
   text-shadow: 0.1rem 0.2rem 0.2rem rgb(172, 172, 52);
@@ -11,8 +11,13 @@ h1 {
   margin: 3vw;
 }
 
+.menu-bar {
+  display: flex;
+  justify-content: center;
+}
+
 body {
-  background-image: url("gif1.gif");
+  background-image: url("https://cdn.pixabay.com/photo/2016/10/11/21/43/geometric-1732847_960_720.jpg");
   color: white;
   background-repeat: no-repeat;
   background-size: cover;
@@ -29,7 +34,7 @@ a:hover {
 
 p {
   font-family: "KoHo", sans-serif;
-  /* font-size: 1rem; */
+  font-size: 4vmin;
   border-style: groove;
   border-width: 0.5rem 0.2rem 0.3rem 0.2rem;
   border-color: cyan;
@@ -59,27 +64,16 @@ img {
 img:hover {
   border: 1vw ridge white;
 }
-#menu-ul {
-  
-  margin: 0.5vw 1vw 0vw 1vw;
-  overflow: auto;
-  background-color: cyan;
+
+.menu-items {
+  padding-right: 5vw;
+  padding-left: 5vw;
+  border: 2px solid white;
+  background-color:black;
+  font-size: 4vmin;
 }
-#menu-li {
-  float: left;
-  padding: 1vw;
-  list-style-type: none;
-  color: blue;
-}
-#menu-li:hover {
-  float: left;
-  padding: 1vw;
-  list-style-type: none;
+
+.menu-items:hover {
+  background-color:rgb(36, 247, 36);
   color: black;
-  background-color: yellow;
-}
-#menu-ul:hover { 
-  margin: 0.5vw 1vw 0vw 1vw;
-  overflow: auto;
-  background-color: cyan;
 }
